<resources>
    <string name="ellipsis">&#8230;</string>

    <string name="app_name">哔哩哔哩beta</string>
    <string name="net_not_available">当前网络不可用</string>
    <string name="search_hint">搜索视频 番剧 up主或av号</string>
    <string name="back_hint">再按一次退出</string>
    <string name="copied">已复制</string>
    <string name="share_hint">来自「哔哩哔哩」的分享：</string>
    <string name="content_empty">内容为空</string>
    <string name="load_error">加载失败~(≧▽≦)~啦啦啦&#8230;</string>
    <string name="load_over">(○｀ 3′○)再怎么找也没有啦！</string>
    <string name="data_load_error">数据加载失败，请重新加载或者检查网络是否链接</string>
    <string name="space">&#160;</string>
    <string name="enter">\n</string>

    <string name="action_more">更多选项</string>
    <string name="action_home">主页</string>
    <string name="action_vip">我的大会员</string>
    <string name="action_offline">离线缓存</string>
    <string name="action_favourite">我的收藏</string>
    <string name="action_history">历史记录</string>
    <string name="action_attention">关注的人</string>
    <string name="action_wallet">我的钱包</string>
    <string name="action_setting">设置与帮助</string>
    <string name="action_game">游戏</string>
    <string name="action_cache">缓存</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_open">浏览器打开</string>
    <string name="action_copy">复制链接</string>
    <string name="action_offline_setting">离线设置</string>

    <string name="login">登录</string>
    <string name="input_account">请输入您的哔哩哔哩账号</string>
    <string name="input_password">请输入您的密码</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>

    <string name="game_center">游戏中心</string>
    <string name="download">下载</string>
    <string name="game_vip_zone">年度大会员游戏礼包专区</string>

    <string name="no_cache">没有找到你的缓存哟</string>
    <string name="offline_cache">离线缓存</string>
    <string name="cache_info">主存储：%1$s/可用：%2$s</string>
    <string name="all_start">全部开始</string>
    <string name="edit">编辑</string>

    <string name="no_favourite">没有找到你的收藏哟</string>
    <string name="no_history">暂时还没有观看记录哟</string>
    <string name="no_attention">你还没有关注的人哟</string>
    <string name="no_wallet">你还没有消费记录哟</string>

    <string name="nick">angel5blue</string>
    <string name="level">LV5</string>
    <string name="member">正式会员</string>
    <string name="coin_amount">硬币：47</string>

    <string name="live">直播</string>
    <string name="recommend">推荐</string>
    <string name="recommend_type_undefine">推荐类型未定义</string>
    <string name="rank_list">排行榜</string>
    <string name="recommend_other">换一波推荐</string>
    <string name="more">更多</string>
    <string name="current_live"><Data><![CDATA[当前<font color="#FB7299">%1$d</font>个直播]]></Data></string>
    <string name="see_more">查看更多</string>
    <string name="recommend_dynamic">%1$d条新动态，点这里刷新</string>
    <string name="go_watch">进去看看</string>
    <string name="bangumi">番剧</string>
    <string name="following_bangumi">追番</string>
    <string name="bangumi_list">放送表</string>
    <string name="bangumi_serializing">新番连载</string>
    <string name="all_serializing">所有连载</string>
    <string name="index">索引</string>
    <string name="current_watching">%1$d人在看</string>
    <string name="updated_to">更新至第%1$s话</string>
    <string name="season_list">分季列表</string>
    <string name="current_pursuing">%1$s人追番</string>
    <string name="bangumi_recommend">番剧推荐</string>
    <string name="subarea">分区</string>
    <string name="discover">发现</string>
    <string name="hot_search">大家都在搜</string>
    <string name="intersecting_circle">兴趣圈</string>
    <string name="topic_center">话题中心</string>
    <string name="activity_center">活动中心</string>
    <string name="creation_rank">原创排行榜</string>
    <string name="total_rank">全区排行榜</string>
    <string name="around_shopping">周边商城</string>
    <string name="pack_up">收起</string>

    <string name="about_me">关于我</string>
    <string name="about_app">关于哔哩哔哩</string>
    <string name="check_update">检查更新</string>
    <string name="login_out">退出登录</string>
    <string name="version">v%1$s</string>
    <string name="github">GitHub:https://github.com/zhouzejin</string>
    <string name="micro_blog">微博:https://m.weibo.cn/u/3201750723</string>
    <string name="jian_shu">简书:http://www.jianshu.com/u/ffd32e08018c</string>
    <string name="about_bilibili">「哔哩哔哩」</string>
    <string name="check_net">网络诊断</string>
    <string name="feedback">意见反馈</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="about_open_source">向开源致敬</string>
    <string name="share_url_hint">非官方开源哔哩哔哩动画安卓客户端，GitHub地址：</string>
    <string name="github_url">https://github.com/zhouzejin/MvvmBilibili</string>
    <string name="share_url_title">分享哔哩哔哩APP</string>
    <string name="feedback_message">如果您有任何意见或者发现了Bug，可以在GitHub上给我提Issues，我会第一时间关注并解决，谢谢~</string>

    <string name="vip">大会员</string>
    <string name="no_vip"><Data><![CDATA[您还不是&#160;&#160;<big><b>大会员</b></big>&#160;&#160;哦]]></Data></string>
    <string name="vip_desc">黑科技在召唤</string>
    <string name="immediately_open">立即开通</string>

    <string name="archive">综合</string>
    <string name="search_title">%1$s(%2$s)</string>
    <string name="season_newest0">%1$s，更新至第%2$d话</string>
    <string name="season_newest1">%1$s，%2$d话全</string>
    <string name="movie">电影</string>
    <string name="area">地区：%1$s</string>
    <string name="actors">演员：%1$s</string>
    <string name="movie_length">%1$d分钟</string>
    <string name="default_sort">默认排序</string>
    <string name="all_time">全部时长</string>
    <string name="all_section">全部分区</string>
    <string name="all_upper">全部用户</string>
    <string name="loading">加载中</string>
    <string name="upper_info">粉丝：%1$d&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;视频：%2$d</string>

    <string name="dialog_action_ok">确定</string>
    <string name="dialog_action_cancel">取消</string>
    <string name="dialog_error_title">抱歉</string>

    <string name="empty_subjects">There aren\'t any subjects</string>
    <string name="error_loading_subjects">There was a problem loading the subjects</string>
</resources>
