<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home"/>
        <item
            android:id="@+id/action_vip"
            android:icon="@drawable/ic_vip"
            android:title="@string/action_vip"/>
        <item
            android:id="@+id/action_offline"
            android:icon="@drawable/ic_offline"
            android:title="@string/action_offline"/>
    </group>

    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_favourite"
            android:icon="@drawable/ic_favourite"
            android:title="@string/action_favourite"/>
        <item
            android:id="@+id/action_history"
            android:icon="@drawable/ic_history"
            android:title="@string/action_history"/>
        <item
            android:id="@+id/action_attention"
            android:icon="@drawable/ic_attention"
            android:title="@string/action_attention"/>
        <item
            android:id="@+id/action_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/action_wallet"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_setting"/>
    </group>
</menu>