<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_game"
        android:icon="@drawable/ic_game"
        android:orderInCategory="100"
        android:title="@string/action_game"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_cache"
        android:icon="@drawable/ic_cache"
        android:orderInCategory="100"
        android:title="@string/action_cache"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
</menu>