<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.sunny.mvvmbilibili.ui.setting.AboutAppActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/layout_toolbar"
            bind:layout="@{activity.toolbarLayout}"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/setting_image_view_width"
                android:layout_height="@dimen/setting_image_view_height"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setting_image_view_margin_top"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setting_image_view_margin_top"
                android:text="@{activity.version}"
                android:textColor="@color/text_color_body"
                android:textSize="@dimen/text_large_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_version"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/setting_text_view_margin"
                android:text="@string/about_bilibili"
                android:textColor="@color/text_color_desc"
                android:textSize="@dimen/text_body"/>

            <RelativeLayout
                android:id="@+id/rl_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/setting_text_view_padding"
                    android:text="@string/check_net"
                    android:textColor="@color/text_color_body"
                    android:textSize="@dimen/text_small_body"/>

                <TextView
                    android:id="@+id/tv_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{(v) -> activity.feedback()}"
                    android:padding="@dimen/setting_text_view_padding"
                    android:text="@string/feedback"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_small_body"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/tv_feedback"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="@{(v) -> activity.share()}"
                    android:padding="@dimen/setting_text_view_padding"
                    android:text="@string/action_share"
                    android:textColor="@color/text_color_body"
                    android:textSize="@dimen/text_small_body"/>
            </RelativeLayout>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@id/rl_bottom"
                android:background="@color/disabled"/>

            <TextView
                android:id="@+id/tv_open_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/view_line"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/setting_text_view_margin"
                android:text="@string/about_open_source"
                android:textColor="@color/text_color_body"
                android:textSize="@dimen/text_small_body"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_open_source"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/setting_text_view_margin"
                android:text="@string/all_rights_reserved"
                android:textColor="@color/text_color_body"
                android:textSize="@dimen/text_mini_body"/>
        </RelativeLayout>
    </LinearLayout>

</layout>